compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/classObject.fir.kt
class C {
    companion <!REDECLARATION!>object<!> {}

    <!REDECLARATION!>val Companion = C<!>
}
